# decree

./: .gitignore  .lychee.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  decree.toml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
10/958674d53f/: metadata.json
19/bd4f15dfe6/: metadata.json
21/164339782e/: metadata.json
4c/2f91f5f118/: metadata.json
57/74daebd790/: metadata.json
5d/3cdc764fa9/: metadata.json
63/c4394f89a5/: metadata.json
79/081cfb7c92/: metadata.json
9d/70fc4134f9/: metadata.json
9f/0ab027e986/: metadata.json
a7/9eb478e531/: metadata.json
b1/6bf66c9a51/: metadata.json
ba/b67940951f/: metadata.json
changelog.d/: +.doc  +7bccc664.doc.md  +agent-onboarding.doc  +agentkith-docs-sync.doc  +agentkith-mcp-integration.feature  +ci-index-verify.bugfix  +commit-check-cli.feature  +commit-check-mcp.feature  +commit-check.feature  +decree-ddd-severity.feature  +decree-init.feature  +example-scenarios.doc  +f1b1d6b2.feature.md  +governance-health-docs.doc  +governs-gap-intent-suggestions.feature  +graph-governs.feature  +graph-json.feature  +health-governance-quality.feature  +homebrew-readme-badge.doc.md  +install-from-git.bugfix  +intent-check-typed-findings.feature  +intent-check-under-and-overlap.feature  +json-contracts-doc.doc  +json-error-contract.feature  +missing-governance-doc-exclusion.bugfix  +missing-governance-suggestions.feature  +observed-governance-dead-signal.feature  +package-versioning.feature  +parallel-safe-identity.feature  +progress-json.feature  +provider-free-agent-contract.breaking  +pypi-doc-correction.bugfix  +release-and-docs.doc  +release-cd.feature  +release-no-pypi.bugfix  +required-buckets-html-board-poc.feature.md  +research-backlog.doc  +skill-sync-guard.misc  +sprint-drop-backlog.bugfix  +sprint-ledger.feature.md  (+5 more)
d4/f4a4f8cb7f/: metadata.json
decree/: AGENTS.md
decree/adr/: 0001-coupled-c4-module-vs-plugin-architecture.md  0002-index-first-architecture-for-decree-queries.md  adr-01kt22nmrv7gmaxkwsbeen68ke-coupled-c4-module-vs-plugin-architecture.md  adr-01kt22nmrv8zfmdkv0wnfngmcj-use-distributed-frontmatter-ids-for-parallel-work.md  adr-01kt22nmrv9cp14x5982jjh161-index-first-architecture-for-decree-queries.md  adr-01kt2jrpkc8zwk48yfxxks7zgv-cross-session-live-conflict-detection-lives-in-intent-check.md  adr-01kt7e7rd6nyasndwve0pq7j8g-commit-check-as-a-ci-coverage-gate-not-a-commit-msg.md  adr-01kw1qghbt2bsz2hvt55g1qsjb-sprint-ledger-and-carryover-semantics.md  adr-01kw1z7gggqmrnn9w1kcdrd70t-physical-folder-buckets-for-document-organization.md  index.md
decree/migrations/: 20260601T171059Z-id-migration.json
decree/prd/: 001-c4-architecture-support.md  002-ddd-cli-command-and-proofshot-integration.md  003-queryable-decision-provenance-graph.md  004-state-of-the-art-decision-reasoning.md  index.md  prd-01kt22nmrr0bx7kbf0f0n5er6z-ddd-cli-command-and-proofshot-integration.md  prd-01kt22nmrr63txr7nx5xyrg5fk-c4-architecture-support.md  prd-01kt22nmrs4qghsfdbz858pp1t-queryable-decision-provenance-graph.md  prd-01kt22nmrsxyt95xe808vd8ev4-state-of-the-art-decision-reasoning.md  prd-01kt22nmrtaf9581axc53ehqtw-real-corpus-validation-against-jira-task-to-md.md  prd-01kt22nmrtftwffaran0pveeta-parallel-safe-document-identity-and-scoped-progress.md  prd-01kw1qezec1r1bstzn1ssppcej-sprint-scoped-execution-tracking.md  prd-01kw1z5zypqgb8e35rwp3ca9r3-foldered-document-buckets.md
decree/spec/: 001-c4-validation-and-diagram-generation.md  002-ddd-cli-completion-report-and-stop-hook.md  003-sqlite-provenance-index-schema-and-sync.md  index.md  (+36 more)
decree/sprints/: ledger.yaml  (+1 more)
docs/: AGENTS.md  architecture.md  configuration.md  health-signals.md  index.md  json-contracts.md  llm-agent-integration.md  model.dot  provenance-model.md  release.md  roadmap.md  usage.md
eval/: queries.yaml
examples/: 01-why.sh  02-intent-check-conflict.sh  03-parallel-sessions.sh  04-intent-review.sh  05-health-dead-governance.sh  06-governs-gap.sh  README.md  _lib.sh  run-all.sh
skills/: AGENTS.md
tests/: AGENTS.md  CLAUDE.md  __init__.py  agentkith_fixtures.py  conftest.py  scenarios.py  test_agents.py  test_c4.py  test_calibration.py  test_classify_path.py  test_cli.py  test_coherence.py  test_commit.py  test_commit_check.py  test_config.py  test_ddd.py  test_dead_governance.py  test_doctypes.py  test_eval.py  test_generate_html.py  test_governs_gaps.py  test_graph.py  test_health.py  test_hook.py  test_identity.py  test_index.py  test_index_db.py  test_init.py  test_integration.py  test_intent_check.py  test_intent_review.py  test_lint.py  test_list_docs.py  test_llm_io.py  test_mcp_server.py  test_migrate_audit.py  test_migrate_governs.py  test_migrate_ids.py  test_missing_governance.py  test_new.py  (+12 more)
(+244 files in other folders)
