[project]
name = "decree"
version = "0.1.0"
description = "Decree — software decision lifecycle toolkit (MADR v4.0.0 ADR management for CLI and LLMs)"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2",
    "python-frontmatter>=1.1.0",
    "python-slugify>=8.0.0",
]

[project.scripts]
decree = "decree.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
