[project]
name = "decree"
version = "0.1.0"
description = "Decree — software decision lifecycle toolkit (MADR v4.0.0 ADR management for CLI and LLMs)"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [{name = "Doruk Sahin"}]
keywords = ["documentation", "adr", "prd", "spec", "decision-records", "architecture", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "pydantic>=2",
    "python-frontmatter>=1.1.0",
    "python-slugify>=8.0.0",
    "sqlite-utils>=3.35",
    "mistletoe>=1.3",
    "networkx>=3",
    "mcp[cli]>=1.0",
    "litellm>=1.83,<2",
    "ir_measures>=0.3",
    "scipy>=1.11",
    "jinja2>=3",
]

[project.urls]
Homepage = "https://github.com/doruksahin/decree"
Repository = "https://github.com/doruksahin/decree"
Issues = "https://github.com/doruksahin/decree/issues"

[project.scripts]
decree = "decree.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.11",
    "pre-commit>=4.2",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
