[project]
name = "decree"
version = "3.0.0"
description = "Decree — software decision lifecycle toolkit (MADR v4.0.0 ADR management for CLI and LLMs)"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [{name = "Doruk Sahin"}]
keywords = ["documentation", "adr", "prd", "spec", "decision-records", "architecture", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "pydantic>=2",
    "python-frontmatter>=1.1.0",
    "python-slugify>=8.0.0",
    "sqlite-utils>=3.35",
    "mistletoe>=1.3",
    "networkx>=3",
    "mcp[cli]>=1.0",
    "ir_measures>=0.3",
    "scipy>=1.11",
    "jinja2>=3",
    "crepes>=0.7",
    "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://decree.doruk.uk"
Documentation = "https://decree.doruk.uk"
Repository = "https://github.com/doruksahin/decree"
Issues = "https://github.com/doruksahin/decree/issues"

[project.scripts]
decree = "decree.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.11",
    "pre-commit>=4.2",
    "towncrier>=25.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.towncrier]
package = "decree"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changelog.d"
title_format = "## v{version} - {project_date}"
issue_format = "[#{issue}](https://github.com/doruksahin/decree/issues/{issue})"
orphan_prefix = "+"
wrap = true
ignore = ["AGENTS.md", "README.md"]

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecation"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "dependency"
name = "Dependency Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Internal Changes"
showcontent = true
